--- a/installation.tex
+++ b/installation.tex
@@ -10,7 +10,7 @@ When you install \LaTeX{} on your computer, it comes packaged as a
 \item A common set of \LaTeX{} \introduce{packages}.
     Packages are bundles of code that do all sorts of things,
     like provide new commands or change a document's style.
-    We'll see a lot of them in action throughout this book.
+    We'll see lots of them in action throughout this book.
 \item Miscellaneous tools, like editors.
 \end{enumerate}
 Each major operating system has its own \LaTeX{} distribution:
@@ -29,12 +29,12 @@ Each major operating system has its own \LaTeX{} distribution:
     Linux distributions usually offer a \texttt{texlive-\allowbreak full}
     or \texttt{texlive-\allowbreak most} package that installs everything
     you need.\punckern\footnote{%
-    If you would rather keep the install size down,
+    If you would prefer a smaller install,
     Linux distributions usually break \TeX{} Live into multiple packages.
     Look for ones with names like
     \texttt{texlive-\allowbreak core}, \texttt{texlive-\allowbreak luatex}
     and \texttt{texlive-\allowbreak xetex}.
-    As you work with \LaTeX, you may need less-common packages,
+    As you use \LaTeX{} more, you may need less-common packages,
     which usually have names like \texttt{texlive-\allowbreak latexextra},
     \texttt{texlive-\allowbreak science}, and so on.
     Of course, all of this may vary from one Linux distribution to another.}
@@ -44,7 +44,7 @@ Each major operating system has its own \LaTeX{} distribution:
 
 Since \LaTeX{} source files are regular text files,
 you write them with the usual choices: Vim, Emacs,
-Sublime, VS~Code, and so on.\punckern\footnote{If you've never used
+VS~Code, and so on.\punckern\footnote{If you've never used
 any of these, try a few.
 They're popular with programmers and other folks who shuffle text around
 screens all day. Just don't use Notepad. Life is too short.}
