--- a/international.tex
+++ b/international.tex
@@ -8,7 +8,7 @@ You may want to write with them.
 
 Digitizing written language is a complicated topic that has evolved significantly
 since \LaTeX's inception.
-Today, most computer systems use Unicode to represent text. Briefly,
+Today, most software uses Unicode to represent text. Briefly,
 \begin{itemize}
 \item A Unicode text file is a series of \introduce{code points}.
     Each represents a character to be drawn,
@@ -28,7 +28,7 @@ Today, most computer systems use Unicode to represent text. Briefly,
 \captionof{figure}{How many characters do you see?
 How many code points?}
 \end{centerfigure}
-\item Modern font formats contain encoding tables
+\item Modern font formats contain tables
     which map code points to the glyphs the file contains.
 \end{itemize}
 \LuaLaTeX{} and \XeLaTeX{} are Unicode-literate and play well with
@@ -83,7 +83,7 @@ Dexter cried,
 \begin{french}
 \lm%
 «Omelette du\footnote{Yes, it's \emph{omelette au fromage}.
-Direct all complaints to Cartoon Network.} fromage!»
+Direct all complaints to Genndy Tartakovsky.} fromage!»
 \end{french}
 \end{leftfigure}
 
