--- a/math.tex
+++ b/math.tex
@@ -16,7 +16,8 @@ In these math environments, the rules of \LaTeX{} change:
     ``paragraph''\quotekern.
 \item Letters are automatically italicized, as they are assumed to be variables.
 \end{itemize}
-To return to normal ``text mode'' inside a formula, use the \verb|\text| command.
+To return to normal ``text mode'' inside a formula, use the \verb|\text| command
+and friends.
 Standard formatting commands work in these blocks.
 From
 \begin{leftfigure}
@@ -29,14 +30,14 @@ we get
 
 \section{Examples}
 
-Typesetting mathematics is arguably the raison d'être of
+Math typesetting is the raison d'être of
 \LaTeX,\punckern\footnote{Well, \TeX} but we could
 take dozens of pages to just cover the basics.
 Given the breadth of modern mathematics,
 there are \emph{many} different commands and environments.
 You owe it to yourself to find some real references and learn what \LaTeX{}
 is capable of.
-Before moving on, though, let's see some examples of what it can do.
+But before moving on, let's see some examples of what it can do.
 
 \begin{enumerate}
 \item \verb|x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}|
