--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -25,6 +25,10 @@
     Ligatures=TeX,
     Numbers={Proportional,Lowercase},
     Contextuals=NoAlternate, % No long Q
+    % Coefficients for font-provided space, stretch, and shrink.
+    % Garamond Premier is a bit tighter than Adobe Garamond,
+    % but stretching it out about 20% gives about the same metrics.
+    %WordSpace={1.2,1.2,1},
     UprightFeatures={
         SizeFeatures={
             {Size={-10},Font=garamondpremrpro-capt},
