--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -120,8 +120,8 @@ then indents subsequent lines for that item:
     He is perhaps most remembered for his model of
     computation, the Turing machine.
 \item[Edsger Dijkstra] was a Dutch computer scientist.
-    His contributions in many subdomains---such as
-    concurrency and graph theory---are still in wide use.
+    His work in many domains---such as concurrency and
+    graph theory---are still in wide use.
 \item[Leslie Lamport] is an American computer scientist.
     He defined the concept of sequential consistency,
     which is used to safely communicate between tasks
@@ -138,8 +138,8 @@ gives us
     He is perhaps most remembered for his model of computation,
     the Turing machine.
 \item[\lm Edsger Dijkstra] was a Dutch computer scientist.
-    His contributions in many subdomains---such as
-    concurrency and graph theory---are still in wide use.
+    His work in many domains---such as concurrency and
+    graph theory---are still in wide use.
 \item[\lm Leslie Lamport] is an American computer scientist.
     He defined the concept of sequential consistency,
     which is used to safely communicate between tasks
@@ -221,11 +221,11 @@ I love footnotes!\footnote{Perhaps a bit too much\dots}
 \item Customize list formatting with the \texttt{enumitem} package.
 \item Create tables with the \texttt{tabular} environment.
 \item Align text with tab stops using the \texttt{tabbing} environment.
-\item Customize footnote symbols and layout with KOMA~Script and the
-    \texttt{footmisc} package.
+\item Customize footnote symbols and layout with the \texttt{footmisc} package
+    and KOMA~Script.
 \item Insert horizontal and vertical space with commands like
     \verb|\vspace|, \verb|\hspace|, \verb|\vfill|, and \verb|\hfill|.
-\item Learn what units \LaTeX{} provides for specifying spacing. \\
+\item Learn what units \LaTeX{} provides to measure space. \\
     (We've already mentioned a few here, like
     \texttt{pt}, \texttt{bp}, and \texttt{in}.)
 \end{itemize}
