--- a/punctuation.tex
+++ b/punctuation.tex
@@ -1,7 +1,7 @@
 \chapter{Punctuation}
 \label{punctuation}
 
-You would much rather encounter a panda that eats
+You would rather encounter a panda that eats
 shoots and leaves than one that eats, shoots,
 and leaves.\punckern\endnote{Lynne Truss,
 \textit{Eats, Shoots \& Leaves} (New York, 2003)}
@@ -61,8 +61,7 @@ serve different purposes.
     \item They are used in phrasal adjectives.
         If I ask for ``five dollar bills''\quotekern,
         do I want five \$1 bills, or several \$5 bills?
-        It's clearer that I want the latter when typeset as
-        \emph{five-dollar bills}.
+        \emph{Five-dollar bills} makes it clearer that I want the latter.
     \end{itemize}
     Unsurprisingly, you get one by typing the hyphen character (\,\texttt{-}\,).
 
@@ -82,12 +81,12 @@ serve different purposes.
     but sit at a different height.
     Minus signs are set with \verb|\textminus|,
     or with the hyphen character
-    when in math environments (see \chapref{math}).
+    when in a math environment (see \chapref{math}).
 \end{description}
 
 \section{Ellipses}
 
-A set of three dots used to indicate a pause or omission is called an
+A set of three dots which indicate a pause or omission is called an
 \introduce{ellipsis}.
 It is set with \verb|\dots|.
 \begin{leftfigure}
@@ -152,7 +151,7 @@ Launch in 2\,h 10\,m.
 \item Familiarize yourself with the difference between \texttt{/} and
     \verb|\slash|.
 \item Add hyphenations for uncommon words using \verb|\hyphenate|
-    or \verb|\-|\,.\punckern\footnote{\LaTeX{} usually does a good
+    or \verb|\-|\,.\punckern\footnote{\LaTeX{} usually does a great
     job of automatically hyphenating words, based on a dictionary of patterns
     stored for each language. You should rarely need these commands.}
 \end{itemize}
