--- a/textformatting.tex
+++ b/textformatting.tex
@@ -111,10 +111,10 @@ and more generous spacing to improve legibility at their size.
 \lm the same height as 11 point type,
 you can easily spot the differences.
 \end{leftfigure}
-Multiple optical sizes were standard back when fonts were made out of metal.
+Back when fonts were made out of metal, multiple optical sizes were standard.
 But many digital fonts only have one,
-since each requires a great deal of design work.\punckern\footnote{If
-you have typefaces with multiple optical sizes,
+since each optical size requires a great deal of careful
+design.\punckern\footnote{If you have typefaces with multiple optical sizes,
 \LuaLaTeX{} and \XeLaTeX{} can make good use of them!
 See \chapref{fonts} for more on font selection.}
 
