--- a/troubleshooting.tex
+++ b/troubleshooting.tex
@@ -76,3 +76,6 @@ by running your engine with the \monobox{-halt-on-error} flag:
 $ lualatex -halt-on-error myDocument.tex
 \end{lstlisting}
 \end{leftfigure}
+\vfill
+
+\noindent Good luck!
