Covers: Axe WordSpace

--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -5,7 +5,7 @@
 % We're using KOMA Script to hand-tune footnotes and TOC appearance.
 % It should be available in your texlive distribution,
 % which is how most distros package LaTeX.
-\documentclass[fontsize=11bp, numbers=endperiod, draft=true]{scrbook}
+\documentclass[fontsize=11bp, numbers=endperiod, draft=false]{scrbook}
 
 % Margins: see http://practicaltypography.com/page-margins.html and
 % http://practicaltypography.com/line-length.html
