--- a/hello.tex
+++ b/hello.tex
@@ -27,7 +27,7 @@ If you are using a \LaTeX{}-specific editor, it should have some menu
 to select the engine you would like to use,
 along with a button to generate your document.
 Otherwise, run the following from your terminal:\footnote{%
-How to work a terminal emulator,
+How to work a terminal,
 make sure the newly-installed \LaTeX{} programs are in your \texttt{PATH},
 and so on are all outside the scope of this book.
 As is tradition, the leading dollar sign in this example just denotes a console
@@ -255,7 +255,7 @@ that critical 3\%.
 \end{quote}
 \end{leftfigure}
 
-\section{Groups and command scope}
+\section{Groups and scopes}
 Some commands change how \LaTeX{} sets the text that follows them.
 \verb|\itshape|, for example, \textit{italicizes} everything that comes after it.
 To limit a command's influence to a certain area, surround it with braces.
