--- a/history.tex
+++ b/history.tex
@@ -47,7 +47,7 @@ It's hard to appreciate how much of a revolution \TeX{} was,
 especially looking back from today, where anybody with a web browser
 can be their own desktop publisher.
 Adobe's \acronym{pdf} wouldn't exist for another decade, so Knuth
-and his graduate students devised their own device-independent (document) format,
+and his graduate students devised their own device-independent document format,
 \acronym{dvi}.
 Scalable fonts were uncommon, so he created \MF{} to rasterize glyphs
 into dots on the page.
