--- a/installation.tex
+++ b/installation.tex
@@ -5,13 +5,13 @@ When you install \LaTeX{} on your computer, it comes packaged as a
 \introduce{distribution} that contains:
 \begin{enumerate}
 \item \LaTeX, the program---the thing that turns markup into
-    typeset documents.\footnote{Well, actually, multiple \LaTeX{} programs,
+    typeset documents.\punckern\footnote{Well, actually, multiple \LaTeX{} programs,
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
     Packages are bundles of code that do all sorts of things,
     like provide new commands or change a document's style.
     We'll see lots of them in action throughout this book.
-\item Miscellaneous tools, like editors.
+\item Editors and other helpful tools.
 \end{enumerate}
 Each major operating system has its own \LaTeX{} distribution:
 \begin{description}
@@ -49,8 +49,8 @@ any of these, try a few.
 They're popular with programmers and other folks who shuffle text around
 screens all day. Just don't use Notepad. Life is too short.}
 There are also editors designed specifically for \LaTeX{},
-which often come with their own built-in \acronym{pdf} viewer.
-(You can find a fairly comprehensive list on the \LaTeX{} Wikibook,
+which often come with a built-in \acronym{pdf} viewer.
+(You can find a good list on the \LaTeX{} Wikibook,
 in its installation chapter. See Appendix~\ref{resources}.)
 
 \section{Online options}
