--- a/international.tex
+++ b/international.tex
@@ -38,7 +38,7 @@ files.\punckern\footnote{\LuaLaTeX{} accepts \mbox{\acronym{utf}-8} files.
 Make sure that the fonts you select contain the glyphs you need---many
 only support Latin languages.
 
-\section{The polyglossia package}
+\section{Polyglossia}
 
 When your document contains languages besides English,
 consider using the \texttt{polyglossia} package.
