--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -292,7 +292,7 @@
 \newcommand{\http}[1]{\href{http://#1}{\texttt{#1}}}
 \newcommand{\https}[1]{\href{https://#1}{\texttt{#1}}}
 
-\newcommand{\edition}{Second edition \acronym{(wip)}}
+\newcommand{\edition}{Second edition}
 
 \newcommand{\exercises}{\section{On your own}}
 
@@ -353,9 +353,6 @@ so long as you give proper credit and provide your contributions under
 the same license. \\
 The license's full text is available at \\
 \https{creativecommons.org/licenses/by-sa/4.0/legalcode}
-\vspace{\baselineskip}
-
-ISBN 978-1-387-80513-6
 }
 \vfill
 
@@ -372,8 +369,7 @@ Questions, comments, concerns, and diatribes can also be emailed to \\
 
 \vspace{\baselineskip}
 The author does not have a checking account with the Bank of San Serriffe,
-but will happily pay for your contributions with a beverage of your choice
-next time we meet.
+but he will happily buy you a drink when we meet as thanks for your help.
 
 \vspace{0.5in}
 \edition, typeset \today.
