--- a/punctuation.tex
+++ b/punctuation.tex
@@ -67,7 +67,7 @@ serve different purposes.
 
 \item[En dashes] are for ranges such as ``pages 4--12''\quotekern,
     and connected words, like ``the \mbox{US--Canada} border''\quotekern.
-    \LaTeX{} places one wherever it sees two adjacent hyphens
+    \LaTeX{} places one wherever you enter two adjacent hyphens
     (\,\texttt{--}\,).
 
 \item[Em dashes] separate clauses of a sentence.
