--- a/structure.tex
+++ b/structure.tex
@@ -4,7 +4,7 @@
 Every \LaTeX{} document is different,
 but all share a few common elements.
 
-\section{The preamble and packages}
+\section{Preambles and packages}
 In the last chapter, you built your first document with:
 \begin{leftfigure}
 \begin{lstlisting}
@@ -106,7 +106,7 @@ and \LaTeX{} figured out that it was chapter~\ref{structure}.
 
 \exercises{}
 
-As promised, this book isn't meant as a comprehensive reference,
+As promised, this book won't try to be a comprehensive reference,
 but it \emph{will} point you to places where you can learn more.
 We'll wrap up most chapters with some related topics that you can
 explore yourself.
