--- a/why.tex
+++ b/why.tex
@@ -2,7 +2,7 @@
 \label{typography}
 
 Life is a parade of written language.
-Ads, apps, articles, essays, emails, menus, messages, and more
+Ads, apps, articles, emails, essays, menus, messages, and more
 constantly shove text in your face.
 And when you read that text, you see so much more than the author's
 verbiage.
@@ -36,7 +36,7 @@ Effective writing isn't just about the words you choose,
 it's also about their look and layout.
 Good typography isn't just art---it's a tool to help people understand you
 better, faster.
-And if you would like to leverage that tool, you should try \LaTeX!
+And if you want to leverage that tool, you should try \LaTeX!
 \clearpage
 
 \section{What is \texorpdfstring{\LaTeX}{LaTeX}?}
@@ -117,8 +117,8 @@ but it comes with a few advantages:
         and simple to replicate.\punckern\footnote{Compare this to
         \acronym{wysiwyg} systems, where it's not always obvious
         how certain formatting was produced or how to match it.}
-    \item You can easily create content using scripts and programs.
-    \item You can track your changes with standard version control software,
+    \item You can automate content creation using scripts and programs.
+    \item You can track your changes with version control software, \\
         like Git or Mercurial.
     \end{itemize}
 \end{enumerate}
@@ -141,8 +141,8 @@ and desktop publishing was a fledgling curiosity.
 This shows---badly---in many \LaTeX{} guides.
 If you look for instructions to change your document's font,
 you get swamped with bespoke nonsense.\punckern\footnote{%
-Take criticisms here with a grain of
-salt. The fact that \LaTeX{} is still here after of the technology around it became
+Take these criticisms with a grain of
+salt. The fact that \LaTeX{} is still here after all of the technology around it became
 obsolete---multiple times---is a testament to its staying power.}
 \clearpage
 
