--- a/fonts.tex
+++ b/fonts.tex
@@ -63,7 +63,7 @@ open-source typefaces are freely available at
 The \verb|Ligatures=TeX| option lets you use the punctuation
 shortcuts from \chapref{punctuation} (\texttt{--} for en dashes,
 \texttt{``} and \texttt{''} for curly quotes, etc.)
-instead of forcing you to enter the the corresponding characters,
+instead of forcing you to enter the corresponding characters,
 which probably aren't on your keyboard.
 You usually don't want these substitutions with monospaced type, though.
 Text that uses it---such as code---is often meant to be printed
@@ -78,14 +78,14 @@ upright,
 \textbf{bold}, and
 \textit{\textbf{bold italic}} fonts.
 But typefaces can have many more than that.
-The version of Futura used in this book, for example, comes in
+The version of Futura in this book, for example, comes in
 {\fontspec[Scale=MatchLowercase]{Futura-Lig}light},
 {\fontspec[Scale=MatchLowercase]{Futura-Boo}book},
 {\fontspec[Scale=MatchLowercase]{Futura-Med}medium},
 {\fontspec[Scale=MatchLowercase]{Futura-Dem}demi},
 {\fontspec[Scale=MatchLowercase]{Futura-Bol}bold}, and
 {\fontspec[Scale=MatchLowercase]{Futura-ExtBol}extra bold} weights.
-Each of these weights has an upright and an oblique font.
+Each of these weights has an oblique font, too.
 A typeface could have other variations,
 like {\fontspec[Scale=MatchLowercase]{FuturaSc-Boo}small capitals}\footnote{%
 OpenType allows some styles, like small caps, to be placed in the same file(s)
@@ -139,8 +139,7 @@ Assuming the font files are named:
 Note that instead of typing out \monobox{Futura-Boo},
 \monobox{Futura-BooObl}, and so on, we can use \texttt{*} to insert the base
 name.\punckern\footnote{This is
-a place where \XeLaTeX{} and \LuaLaTeX{}
-differ in a way that's noticeable to the casual user.
+a place where \XeLaTeX{} and \LuaLaTeX{} differ.
 The former uses system libraries---such as FontConfig on Linux---to
 find font files.
 The latter has its own font loader,
@@ -168,7 +167,7 @@ Just one or two, used carefully, can produce amazing results.
 \section{OpenType features}
 
 As mentioned at the start of the chapter,
-OpenType fonts provide various features that can be switched on and off.
+OpenType fonts provide many features that can be switched on and off.
 In \LaTeX{}, we do this with optional arguments to
 \verb|\setmainfont| and friends.
 Features can also be set for the current group with
@@ -229,8 +228,8 @@ handle these cases for you.
 \subsection{Figures}
 
 When setting figures,\punckern\footnote{%
-We use the term \introduce{figures} when talking typography for the symbols
-we might otherwise call \introduce{digits} (0, 1, 2, 3, 4, 5, 6, 7, 8, 9).}
+\introduce{Figures} is typography-speak for what we might also call
+\introduce{digits} (0, 1, 2, 3, 4, 5, 6, 7, 8, 9).}
 you have two
 choices to make: lining versus text,
 and proportional versus tabular.
