Now in dead tree!

--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -364,8 +364,9 @@ The license's full text is available at \\
 }
 
 \vspace{\baselineskip}
-Print copies of this book will be available at cost from Lulu
-once this edition is finalized.
+Print copies of this book are available at cost on
+\href{https://app.thebookpatch.com/BookStore/modern-latex/37e37107-c04d-4278-9d1b-32979616dc85}{TheBookPatch}
+and \href{https://www.amazon.com/Modern-LaTeX-Matt-Kline/dp/B0B7PZB2YB}{Amazon}.
 \vfill
 
 The author apologizes for any typos,
